compile_server/temp/1690588207919_32.compile_error
./temp/1690588207919_32.cpp: In member function ‘bool Solution::isPalindrome(int)’:
./temp/1690588207919_32.cpp:20:15: error: ‘n’ was not declared in this scope
     return m==n;
               ^
